WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275569
[WebGPU] Release assertion triggered in RenderPassEncoder::computeMininumVertexInstanceCount
https://bugs.webkit.org/show_bug.cgi?id=275569
Summary
[WebGPU] Release assertion triggered in RenderPassEncoder::computeMininumVert...
Mike Wyrzykowski
Reported
2024-06-17 09:43:10 PDT
[WebGPU] Release assertion triggered in RenderPassEncoder::computeMininumVertexInstanceCount
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-06-17 09:43:30 PDT
radar://129990531
Mike Wyrzykowski
Comment 2
2024-06-17 11:33:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29904
EWS
Comment 3
2024-06-24 13:57:03 PDT
Committed
280310@main
(59950b920418): <
https://commits.webkit.org/280310@main
> Reviewed commits have been landed. Closing PR #29904 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug