[WebGPU] Release assertion triggered in RenderPassEncoder::computeMininumVertexInstanceCount https://bugs.webkit.org/show_bug.cgi?id=275569 <radar://129990531>

Reviewed by Tadeu Zagallo.

If the user does not call setVertexBuffer on a buffer which the pipeline
uses, we should treat the buffer's size as 0.

* LayoutTests/fast/webgpu/nocrash/poc-275569-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/poc-275569.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::computeMininumVertexInstanceCount const):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::computeMininumVertexInstanceCount const):

Canonical link: https://commits.webkit.org/280310@main